--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
+    "@angular/animations": "^8.2.10",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ne-swapi": "^0.1.4",
     "popper.js": "^1.15.0",
